Name:           daemons
Version:        0.1.1
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/daemons
Category:       System, Control, Network
Synopsis:       Daemons in Haskell made fun and easy
Build-Type:     Simple
Description:
        "Control.Pipe.C3" provides simple RPC-like wrappers for pipes.
        .
        "Control.Pipe.Serialize" provides serialization and
        incremental deserialization pipes.
        .
        "Control.Pipe.Socket" provides functions to setup pipes around
        sockets.
        .
        "System.Daemon" provides a high-level interface to starting
        daemonized programs that are controlled through sockets.
        .
        "System.Posix.Daemon" provides a low-level interface to
        starting, and controlling detached jobs.
        .
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, NEWS.md, LICENSE

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/daemons.git

Library
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        data-default, directory, filepath, network, pipes >= 3.1,
                        transformers, unix
  Ghc-options:          -Wall
  Exposed-modules:      Control.Pipe.C3,
                        Control.Pipe.Serialize,
                        Control.Pipe.Socket,
                        System.Daemon,
                        System.Posix.Daemon
  Other-modules:

Executable memo
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, data-default, directory, filepath,
                        ghc-prim, pipes >= 3.1, transformers, network, unix
  Main-Is:              examples/Memo.hs
  Ghc-options:          -Wall

Executable addone
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, data-default, directory, filepath,
                        ghc-prim, pipes >= 3.1, transformers, network, unix
  Main-Is:              examples/AddOne.hs
  Ghc-options:          -Wall

Executable queue
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, data-default, directory, filepath,
                        ghc-prim, pipes >= 3.1, transformers, network, unix
  Main-Is:              examples/Queue.hs
  Ghc-options:          -Wall

Executable name
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, data-default, directory, filepath,
                        ghc-prim, pipes >= 3.1, transformers, network, unix
  Main-Is:              examples/Name.hs
  Ghc-options:          -Wall

Test-suite daemon
  Hs-Source-Dirs:       Test, .
  Main-Is:              Daemon.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, data-default, directory,
                        filepath, unix
  Ghc-Options:          -Wall

  Build-Depends:        test-framework, test-framework-hunit, HUnit
