Name:           daemons
Version:        0.4.0
Cabal-Version:  1.24
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/daemons
Category:       System, Control, Network
Synopsis:       Daemons in Haskell made fun and easy
Build-Type:     Simple
Description:
        "Control.Pipe.C3" provides simple RPC-like wrappers for pipes.
        .
        "Control.Pipe.Serialize" provides serialization and
        incremental deserialization pipes.
        .
        "Control.Pipe.Socket" provides functions to setup pipes around
        sockets.
        .
        "System.Daemon" provides a high-level interface to starting
        daemonized programs that are controlled through sockets.
        .
        "System.Posix.Daemon" provides a low-level interface to
        starting, and controlling detached jobs.
        .
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, NEWS.md, LICENSE, examples/Memo.md

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/daemons.git

Library
  Hs-Source-Dirs:       src
  Build-depends:        base >= 4.18 && < 5,
                        bytestring >= 0.11 && < 0.12,
                        cereal >= 0.4 && < 0.6,
                        data-default >= 0.7 && < 0.8,
                        directory >= 1.3 && < 1.4,
                        filepath >= 1.4 && < 1.5,
                        ghc-prim >= 0.10 && < 0.11,
                        network >= 3.1 && < 3.2,
                        pipes >= 4.0 && < 4.4,
                        transformers >= 0.6 && < 0.7,
                        unix >= 2.8 && < 2.9
  Ghc-options:          -Wall
  Exposed-modules:      Control.Pipe.C3,
                        Control.Pipe.Serialize,
                        Control.Pipe.Socket,
                        System.Daemon,
                        System.Posix.Daemon
  Other-modules:
  Default-language:     Haskell2010

Executable memo
  Build-depends:        base >= 4.18 && < 5,
                        bytestring >= 0.11 && < 0.12,
                        cereal  >= 0.4 && < 0.6,
                        containers >= 0.6 && < 0.7,
                        daemons,
                        data-default >= 0.7 && < 0.8,
                        ghc-prim >= 0.10.0 && < 0.11
  Main-Is:              examples/Memo.hs
  Ghc-options:          -Wall
  Default-language:     Haskell2010

Executable addone
  Build-depends:        base >= 4.18 && < 5, daemons,
                        data-default >= 0.7 && < 0.8,
                        ghc-prim >= 0.10 && < 0.11
  Main-Is:              examples/AddOne.hs
  Ghc-options:          -Wall
  Default-language:     Haskell2010

Executable queue
  Build-depends:        base >= 4.18 && < 5,
                        bytestring >= 0.11 && < 0.12,
                        cereal >= 0.4 && < 0.6,
                        containers >= 0.6 && < 0.7,
                        daemons,
                        data-default >= 0.7 && < 0.8,
                        ghc-prim >= 0.10 && < 0.11,
                        network >= 3.1 && < 3.2,
                        pipes >= 4.0 && < 4.4,
                        transformers >= 0.6 && < 0.7
  Main-Is:              examples/Queue.hs
  Ghc-options:          -Wall
  Default-language:     Haskell2010

Executable name
  Build-depends:        base >= 4.18 && < 5,
                        bytestring >= 0.11 && < 0.12,
                        cereal >= 0.4 && < 0.6,
                        containers >= 0.6 && < 0.7,
                        daemons,
                        data-default >= 0.7 && < 0.8,
                        ghc-prim >= 0.10.0 && < 0.11
  Main-Is:              examples/Name.hs
  Ghc-options:          -Wall
  Default-language:     Haskell2010

Test-suite daemon
  Hs-Source-Dirs:       test
  Main-Is:              Daemon.hs
  Type:                 exitcode-stdio-1.0
  Build-Depends:        base >= 4.18 && < 5, daemons,
                        data-default >= 0.7 && < 0.8,
                        directory >= 1.3 && < 1.4,
                        ghc-prim >= 0.10 && < 0.11,
                        HUnit, test-framework, test-framework-hunit,
                        unix >= 2.8 && < 2.9
  Ghc-Options:          -Wall
  Default-language:     Haskell2010
