Name:           pipes-c3
Version:        0.1.0
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/pipes-c3
Category:       Text
Synopsis:       Library to easily control daemonized programs
Build-Type:     Simple
Description:
        "Control.Pipe.Serialize" provides serialization and
        incremental deserialization pipes.
        .
        See the README.md file for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, NEWS.md, LICENSE

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/pipes-c3.git

Library
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        network, pipes-core, transformers
  Ghc-options:          -Wall
  Exposed-modules:      Control.Pipe.Serialize, Control.Pipe.Socket
  Other-modules:

Executable memo
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, ghc-prim, pipes-core, pipes-extra,
                        random, transformers
  Main-Is:              Memo.hs
  Ghc-options:          -Wall
