Name:           pipes-c3
Version:        0.1.0
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/pipes-c3
Category:       Text
Synopsis:       Library to easily control daemonized programs
Build-Type:     Simple
Description:
        "Control.Pipe.Serialize" provides serialization and
        incremental deserialization pipes.
        .
        "Control.Pipe.Socket" provides functions to setup pipes around
        sockets.
        .
        See the README.md file for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, NEWS.md, LICENSE

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/pipes-c3.git

Library
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        data-default, network, pipes,
                        system-filepath, transformers, unix
  Ghc-options:          -Wall -threaded
  Exposed-modules:      Control.Pipe.Serialize, Control.Pipe.Socket,
                        System.Posix.Daemon
  Other-modules:

Executable memo
  Build-depends:        base >= 4 && < 5, bytestring, cereal,
                        containers, data-default, ghc-prim, pipes,
                        transformers, network, system-filepath, unix
  Main-Is:              Memo.hs
  Ghc-options:          -Wall

Test-suite daemon
  Hs-Source-Dirs:       Test, .
  Main-Is:              Daemon.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, data-default, directory,
                        system-filepath, unix
  Ghc-Options:          -Wall

  Build-Depends:        test-framework, test-framework-hunit, HUnit
